[package]
name = "mysql_helper"
version = "0.1.2"
edition = "2021"
description = "Make mysql to struct simple with macro"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true



[dependencies]
syn = "1.0.98"