[package]
name = "mysql_helper"
version = "0.1.5"
edition = "2021"
description = "Make mysql to struct simple with macro"
license = "MIT/Apache-2.0"
repository = "https://github.com/changpengdiao/mysql-helper/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true



[dependencies]
syn = "1.0.98"